- Fix width of toolbar on IOS devices

--- a/css/sem-admin-menu.css
+++ b/css/sem-admin-menu.css
@@ -3,7 +3,7 @@ body {
 }
 
 #am {
-	position: absolute;
+	position: fixed;
 	top: 0px;
 	left: 0px;
 	width: 100%;
